@@ -1,6 +1,11 @@
 # ChangeLog for app-text/wscr
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/wscr/ChangeLog,v 1.16 2009/01/03 15:45:10 angelos Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/wscr/ChangeLog,v 1.17 2010/10/14 19:40:30 jer Exp $
+
+*wscr-1.2-r1 (14 Oct 2010)
+
+  14 Oct 2010; Jeroen Roovers <jer@gentoo.org> +wscr-1.2-r1.ebuild:
+  Respect LDFLAGS.
 
   03 Jan 2009; Christoph Mende <angelos@gentoo.org> wscr-1.2.ebuild:
   QA: Respect CC (bug 243762)
